actualizacion 1 de index.html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 10vw;
+            font-size: 3vw;
             color: #888;
             background-color: #ddd;
+            text-align: center;
+            font-family: monospace;
         }
     </style>
     SHEFTER-2 EXAMPLE PAGE
