--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shefter</title>
+    <title>Lautaro J. Blanco - Portfolio Web</title>
 
     <link rel="stylesheet" href="./assets/css/main.css">
     <link rel="stylesheet" href="./assets/css/notification.css">
@@ -24,7 +24,15 @@
     </div>
 
     <div class="all-page">
+        
+        <div class="sidebar">
+            <div class="portfolio">Portfolio Web</div>
+            <div class="nombre">Lautaro J. Blanco</div>
+        </div>
 
+        <div class="content">
+            ejemplo de contenido
+        </div>
     </div>
 
     <script src="./assets/js/notification.js"></script>
